fix: serve CMS UI as static assets from the CMS worker
The CMS React app was built but never wired into the deployment pipeline.
The worker served placeholder HTML at / and had no static asset config,
so deploying gave you an API with no UI.

- Add wrangler assets config to cms-worker pointing at cms-ui/dist with
  SPA fallback routing and run_worker_first for /api/* and /health
- Remove placeholder HTML route from cms-worker index.ts
- Build cms-ui before deploying cms-worker (deploy:cms script)
- Rename embed worker from newsroom-polls-embed to newsroom-polls and
  update the cross-worker Durable Object script_name reference
- Remove incorrect global wrangler install instruction from README
- Remove outdated Cloudflare Pages deployment section from README

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run build --workspaces --if-present",
     "deploy": "npm run deploy:embed && npm run deploy:cms",
     "deploy:embed": "npm run deploy -w packages/embed-worker",
-    "deploy:cms": "npm run deploy -w packages/cms-worker",
+    "deploy:cms": "npm run build -w packages/cms-ui && npm run deploy -w packages/cms-worker",
     "test": "npm test --workspaces --if-present",
     "lint": "npm run lint --workspaces --if-present",
     "typecheck": "tsc --noEmit && npm run typecheck -w packages/cms-ui"
