--- a/packages/embed-worker/wrangler.jsonc
+++ b/packages/embed-worker/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "newsroom-polls-embed",
+  "name": "newsroom-polls",
   "main": "src/index.ts",
   "compatibility_date": "2024-01-01",
 
